Update kofi link II

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="text-title" data-aos="fade-up"><p>Support</p></div>
             <div class="C text-normal" data-aos="fade-up">
                 <p>This site is still under construction, sorry for the inconvenience.</p><br>
-                <p>In the mean time, you can support me via Ko-fi <a target="_blank" href="https://ko-fi.com/raviolimavioli" class="highlight-2">here</a></p>
+                <p>In the mean time, you can support me via Ko-fi <a target="_blank" href="https://ko-fi.com/ravimo" class="highlight-2">here</a></p>
             </div>
         </div>
         
