--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-normal" data-aos="fade-up" href="https://www.artstation.com/raviolimavioli4"><p>More can be found on my Artstation account</p></div>
+        <a class="text-normal" data-aos="fade-up" href="https://www.artstation.com/raviolimavioli4"><p>More can be found on my Artstation account</p></a>
 
         <!--Comission section-->
         <div id="commission">
