--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <div class="Title">
         <img src="resource/image/manjaro icon.png" class="shad-mid">
         <h1>RavioliMavioli</h1>
-        <p>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
+        <p>I am Ravioli, a freelance 2D/3D digital artist<br>
+            Chemical Engineering Student, Front End Developer,<br>
+            and open-source enthusiast. Welcome to my web page</p>
         <svg></svg><br>
         <a class="commission-btn box-bold" onclick="scrollToTargetAdjusted('commission',75)">Commission Info</a>
         
