--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="external-links"><br>
             <ul>
                 <li><a id="pixiv" href="https://www.pixiv.net/en/users/60562229" target="_blank" onmouseover="ExternalLinksEnter('pixiv')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Pixiv.svg"><p>Pixiv</p></a></li>
-                <li><a id="instagram" href="https://www.instagram.com/_ravimo/" target="_blank" onmouseover="ExternalLinksEnter('instagram')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/instagram.svg"><p>Instagram</p></a></li>
+                <li><a id="instagram" href="https://www.instagram.com/raviolimavioli/" target="_blank" onmouseover="ExternalLinksEnter('instagram')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/instagram.svg"><p>Instagram</p></a></li>
                 <li><a id="twitter" href="https://twitter.com/_ravimo" target="_blank" onmouseover="ExternalLinksEnter('twitter')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/twitter.svg"><p>Twitter</p></a></li>
                 <li><a id="github" href="https://github.com/RavioliMavioli" target="_blank" onmouseover="ExternalLinksEnter('github')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Github.svg"><p>GitHub</p></a></li>
                 <li><a id="kofi" href="https://ko-fi.com/ravimo" target="_blank" onmouseover="ExternalLinksEnter('kofi')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Kofi.svg"><p>Ko-fi</p></a></li>
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </div>
-        <a class="text-normal" data-aos="fade-up" href="https://www.artstation.com/raviolimavioli4"><p>More can be found on my Artstation account</p></a>
+        <a class="text-normal" data-aos="fade-up" href="https://www.artstation.com/raviolimavioli4" target="_blank"><p>More can be found on my Artstation account</p></a>
 
         <!--Comission section-->
         <div id="commission">
