--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
     <!--Google Analytics            : https://analytics.google.com/ -->
     <!--Scrolling script            : https://stackoverflow.com/questions/49820013/javascript-scrollintoview-smooth-scroll-and-offset -->
     <!--                                                                                 -->
-    <!--Developer/Artist note:-->
-    <!--                                                                                 -->
-    <!--This website was planned to be built using carrd.co. But I realized there were so many limitations, locked by paywalls-->
-    <!--Then I tried Worldpress, instantly regret it-->
-    <!--The next option was to use a framework which involves coding, but I had to learn the framework syntax and functions-->
-    <!--So fuck it, I am gonna build it from scratch.-->
-    <!--                                                                                 -->
-    <!--Sincerely, Ravimo-->
 
 <html lang="en">
 <head>
@@ -39,10 +31,11 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/support.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/boxshadow.css">
+    <link rel="stylesheet" href="css/scrollbar.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +44,7 @@
 
     <script src="js/scroll.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/lightbox-plus-jquery.js"></script>
+    <script src="js/Lightbox/lightbox-plus-jquery.js"></script>
     <script>lightbox.option({ disableScrolling: true });</script>
     
     
@@ -65,6 +58,8 @@
     <!--Header section (Icon, title, etc)-->
     <div id="landing" class="header" data-aos="fade-up" loading="lazy">
     <div id="header-img" class="header"></div>
+    <div id="scrollpath"></div>
+    <div id="scrollbar"></div>
     <div class="Title">
         <img src="resource/image/icon.png" class="shad-mid">
         <h1>Ravimo</h1>
