Changed to 'sending email'

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                             </div>
                             
                             <div class="text-header email-not-sent">
-                                Email sent, Thank you!
+                                Sending email...
                             </div>
                         </form>
                     </div>
