Mobile responsiveness improvement

--- a/index.html
+++ b/index.html
@@ -86,11 +86,19 @@
     <div class="navbar box-mid">
         <div class="navbrand" data-aos="fade-up" data-aos-once=true><a onclick="scrollToTarget('landing')">Ravimo</a></div>
         <div class="navcenter" data-aos="fade-up" data-aos-once=true>
-            <a onclick="scrollToTargetAdjusted('portfolio',75)">Portfolio</a>
-            <a onclick="scrollToTargetAdjusted('commission',75)">Commission</a>
-            <a id="navtos" onclick="scrollToTargetAdjusted('tos',75)">Terms of Service</a>
+            <a onclick="scrollToTargetAdjusted('portfolio',75), Unclick()">Portfolio</a>
+            <a onclick="scrollToTargetAdjusted('commission',75), Unclick()">Commission</a>
+            <a onclick="scrollToTargetAdjusted('tos',75), Unclick()">Terms of Service</a>
+            <a id="nav-contact" onclick="scrollToTargetAdjusted('contact',75), Unclick()">Contact</a>
         </div>
-        <div class="navsupport" data-aos="fade-up" data-aos-once=true><a onclick="scrollToTargetAdjusted('contact',75)" target="_blank">Contact</a></div>
+        <div class="navsupport" data-aos="fade-up" data-aos-once=true><a onclick="scrollToTargetAdjusted('contact',75)" target="_blank">Contact</a>
+            <div class="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+    
+        </div>
     </div>
 
 
@@ -545,6 +553,7 @@
 
         });
     </script>
+    <script src="js/hamburger.js"></script>
     <script>Initialize()</script>
 </body>
 <footer class="shad-bold">
