--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <!-- This was the most hardest script to make-->
             <div class="region-container" data-aos="fade-up">
                 <a id="Outdonesia" class="animation-change-color-region box-bold" onclick="Region('Outdonesia')"><p>USD</p></a>
-                <!--<a id="Indonesia" class="box-bold" onclick="Region('Indonesia')"><p>IDR</p></a>-->
+                <a id="Indonesia" class="box-bold grayed" onclick="Region('Indonesia')"><p>IDR</p></a>
             </div>
             <!-- This was the second hardest script to make-->
             <div class="commission-container animation-halfbody">
