--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <!-- This was the most hardest script to make-->
             <div class="region-container" data-aos="fade-up">
                 <a id="Outdonesia" class="animation-change-color-region box-bold" onclick="Region('Outdonesia')"><p>USD</p></a>
-                <a id="Indonesia" class="box-bold grayed" onclick="Region('Indonesia')"><p>IDR</p></a>
+                <a id="Indonesia" class="box-bold"><p>IDR</p></a>
             </div>
             <!-- This was the second hardest script to make-->
             <div class="commission-container animation-halfbody">
@@ -473,13 +473,13 @@
                     </div><br>
                 </div>
                 <div class="agree-container" data-aos="fade-up">
-                    <a class="agree-check-1 box-bold" onclick="Agree()"></a>
+                    <a class="agree-check-1 box-bold"></a>
                     <div class="agree-check-2"><p>I agree with the terms above.</p></div>
                     
                 </div><br><br>
                 <div data-aos="fade-up">
                     <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
-                    <a class="order-btn-disabled box-bold">Order now</a>
+                    <a class="order-btn-disabled box-bold">Sorry, Commission Closed</a>
                 </div>
             </div>        
         </div><br><br><br><br><br><br>
