--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="Title">
         <img src="resource/image/icon.png" class="shad-mid">
         <h1>Ravimo</h1>
-        <p>I am Ravimo, a freelance illustrator, junior<br>
+        <p>I am Ravimo, a freelance illustrator,<br>
             developer, and open-source enthusiast<br>
             Welcome to my web page!</p>
         <svg></svg><br>
