--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
             <div class="game-container text-title" data-aos="fade-up">
                 <a href="https://raviolimavioli.itch.io/system77" target="_blank"><p>System77-prototype</p></a>
                 <div class="game-container-image">
-                    <img src="https://img.itch.zone/aW1hZ2UvMjI2ODYxOC8xMzQ0NTA0Ni5wbmc=/original/6MFpML.png" data-aos="fade-up">
-                    <img src="https://img.itch.zone/aW1hZ2UvMjI2ODYxOC8xMzQ0NTA0NC5wbmc=/original/Sf2dgU.png" data-aos="fade-up">
+                    <img class="box-bold" src="https://img.itch.zone/aW1hZ2UvMjI2ODYxOC8xMzQ0NTA0Ni5wbmc=/original/6MFpML.png" data-aos="fade-up">
+                    <img class="box-bold" src="https://img.itch.zone/aW1hZ2UvMjI2ODYxOC8xMzQ0NTA0NC5wbmc=/original/Sf2dgU.png" data-aos="fade-up">
                 </div>
             </div>
         </div>
