--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             <div class="commercial-check-2"><p>Commercial purpose</p></div>
                         </div>
                         <div class="total-price-container">
-                            <p>The total price is:</p>
+                            <p>Total (May fluctuate) :</p>
                             <div class="total-price-number shad-bold"></div>
                         </div>
                     </div>
@@ -482,6 +482,7 @@
                         </div>
                     </div><br>
                 </div>
+                <!--
                 <div class="agree-container" data-aos="fade-up">
                     <a class="agree-check-1 box-bold"></a>
                     <div class="agree-check-2"><p>I agree with the terms above.</p></div>
@@ -491,6 +492,8 @@
                     <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
                     <a class="order-btn-disabled box-bold">Sorry, Commission Closed</a>
                 </div>
+                -->
+                
             </div>        
         </div><br><br><br><br><br><br>
         <div id="contact">
